--- a/app/views/application/_nav.html.haml
+++ b/app/views/application/_nav.html.haml
@@ -1,5 +1,9 @@
 %nav.row
   .col-xs-8.col-xs-offset-1
     =link_to 'Home', root_path
-    =link_to 'Register', new_user_path
-    =link_to 'Login',""
+    -if signed_in?
+      =link_to 'Your Q', new_user_path
+      =link_to "Logout(#{current_user.name})", session_path, method: :delete
+    -else
+      =link_to 'Register', new_user_path
+      =link_to "Login", new_session_path
