add question model n index action,db constraints

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -13,4 +13,7 @@
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
   }
+  input[type='text'] {
+    color: #666666;
+  }
 }
