--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,14 +1,17 @@
 .container
   %h2 Ask a Question
   -if signed_in?
-    =form_for :question do |f|
-      =f.label :question
-      =f.text_field :ques
-      =f.submit "Ask a Question", class:"btn btn-info"
+    =render "questions/form"
   -else
     %h4 Please login to ask or answer questions
   %hr
   %h3 Unsolved Questions
   %ul
     -@questions.each do |q|
-      %li q.ques
+      %li
+        =q.ques
+        %span
+          by
+          =current_user.name
+          =time_ago_in_words q.created_at
+          ago
