--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,3 +1,10 @@
+-if @user.errors
+  %ul
+    -@user.errors.messages.each do |field,error|
+      %li
+        =field
+        -error.each do |e|
+          =e
 =form_for @user do |f|
   .form-group
     =f.label :username
