set up testing, questionControllerSpec init

--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -12,6 +12,6 @@
         =q.ques
         %span
           by
-          =current_user.name
+          =q.user.name
           =time_ago_in_words q.created_at
           ago
