--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -1,10 +1,11 @@
-%li
-  =question.ques
-  %span
-    by
-    -if question.user
-      =question.user.name
-    -else
-      DEAD USER
-    =time_ago_in_words question.created_at
-    ago
+-cache question do
+  %li
+    =question.ques
+    %span
+      by
+      -if question.user
+        =question.user.name
+      -else
+        DEAD USER
+      =time_ago_in_words question.created_at
+      ago
