just fun with css animations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,5 +16,8 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "loaders.css/loaders.css";
+@import "hover/css/hover.css";
+@import "animate.css/animate.css";
 /*@import "animate.css/animate.css";*/
 
