--- a/app/views/application/_head.html.haml
+++ b/app/views/application/_head.html.haml
@@ -1,7 +1,11 @@
 %header
   .row
-    .col-xs-5.col-xs-offset-1
-      %h4 Snappy!
+    .col-xs-3.col-xs-offset-1
+      %h2 Snappy!
     .col-xs-4
       %h6 Snappy!
+    .col-xs-3.col-xs-offset-1
+      .loader.anime
+        .loader-inner
+
 
