--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,12 +8,20 @@
   min-height: 300px;
   background: lightcoral;
   header {
+    min-height: 90px;
     background: darkblue;
     padding: 2px 0 10px 0;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
+    .anime {
+      position: relative;
+      top:25px;
+    }
   }
   input[type='text'] {
     color: #666666;
+  }
+  .form-group {
+    width: 100%;
   }
 }
