init russian doll,memcache,question show action,tests

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,6 @@
 .container-main {
+  box-shadow: 10px 20px 20px rgba(60,20,120,.3);
+  text-shadow: 0 1px 1px rgba(0,0,0,.3);
   width: 90%;
   margin-top: 10px;
   color: white;
