--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,10 +1,3 @@
 .container
-  %h2 Ask a Question
-  -if signed_in?
-    =render partial:"questions/form", locals:{question:@question}
-  -else
-    %h4 Please login to ask or answer questions
-  %hr
-  %h3 Unsolved Questions
-  %ul
-    =render @questions
+  %h2 Your Questions So Far
+  =render @questions
