--- a/app/views/application/_nav.html.haml
+++ b/app/views/application/_nav.html.haml
@@ -1,9 +1,14 @@
 %nav.row
-  .col-xs-8.col-xs-offset-1
-    =link_to 'Home', root_path
-    -if signed_in?
-      =link_to 'Your Q', new_user_path
-      =link_to "Logout(#{current_user.name})", session_path, method: :delete
-    -else
-      =link_to 'Register', new_user_path
-      =link_to "Login", new_session_path
+  %ul.nav.nav-pills.col-xs-8.col-xs-offset-1
+    %li{class:current_page?(root_path) && "active"}
+      =link_to 'Home', root_path
+      -if signed_in?
+        %li{class:current_page?(new_user_path) && "active"}
+          =link_to 'Your Q', user_questions_path(current_user)
+        %li{class:current_page?(session_path) && "active"}
+          =link_to "Logout(#{current_user.name})", session_path, method: :delete
+      -else
+        %li{class:current_page?(new_user_path) && "active"}
+          =link_to 'Register', new_user_path
+        %li{class:current_page?(new_session_path) && "active"}
+          =link_to "Login", new_session_path
