--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -9,4 +9,4 @@
 =form_for([current_user, question]) do |f|
   =f.label :question
   =f.text_field :ques
-  =f.submit "Ask a Question", class:"btn btn-info"
+  =f.submit submit, class:"btn btn-info"
