--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -14,3 +14,10 @@
           DEAD USER
         =time_ago_in_words question.created_at
         ago
+        -if question.user && current_user==question.user
+          =link_to("edit",edit_user_question_path(user_id:question.user.id,  id:question))
+        \-(
+        =pluralize(question.answers.count,'answer')
+        )
+
+
