--- a/app/views/questions/all.html.haml
+++ b/app/views/questions/all.html.haml
@@ -1,9 +1,10 @@
 .container
   %h2 Ask a Question
   -if signed_in?
-    =render partial:"questions/form", locals:{question:@question}
+    =render partial:"questions/form", locals:{question:@question, submit:"Ask a Question"}
   -else
     %h4 Please login to ask or answer questions
   %hr
   %h3 Unsolved Questions
   =render @questions
+  =will_paginate @questions
