--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Snappy</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <media name=”viewport”  content=”width=device-width, initial-scale=1.0” />
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -13,7 +14,9 @@
     <% if notice %>
       <span class="alert-info"><%= notice %></span>
     <%end%>
+  <main>
     <%= yield %>
+  </main>
 </div>
 </body>
 </html>
