--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -26,5 +26,5 @@
         placeholder:"Answer"
       =f.submit "Post Answer", class:"btn btn-info"
   -else
-    please login to post answer to this question
+    =render partial: "guest"
   %hr
