--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -11,15 +11,25 @@
   background: lightcoral;
   header {
     min-height      : 90px;
-    background: url("1.jpg");
     background-size: 100% 100%;
-    color: blue;
+    font-weight: bold;
+    background-color: #9e9e9e;
+    background-image: linear-gradient(to bottom, #9e9e9e, #454545);
+    font-style: oblique;
+    letter-spacing: .3em;
     padding: 2px 0 10px 0;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
     .anime {
       position: relative;
-      top:25px;
+      top: 25px;
+    }
+    h2 {
+      height: 50px;
+      font-size: 2em;
+      font-family: cursive;
+      color: #2E2F30;
+      font-weight: bold;
     }
   }
   input[type='text'] {
@@ -31,42 +41,55 @@
 }
 
 @media(max-width:767px) {
-  main {
-    background: url(5.jpg) ;
-    background-size: 100% 100%;
-    .container > ul {
-      li {
-        font-family: fantasy;
-        list-style: circle;
-        padding-bottom: 16px;
-        span.ques{
-          display: block;
-          font-size: 1.3em;
+  .container-main {
+    header {
+      background: url("1.jpg");
+      background-size: 30% 100%;
+      opacity: 0.6;
+      .anime {
+        .loader-inner > div {
+          background-color: #000000;
         }
-        span.byques{
-          color: #cccccc;
-          font-size: 0.7em;
-        }
-        span.quesusername{
-          font-size:1.2em ;
-          margin:0 10px;
-          text-shadow: 2px 2px grey;
-        }
-        span.questime {
-          display: block;
-          position: absolute;
-          font-size: .7em;
-        }
-        span.queseditlink {
-          position: relative;
-          float: right;
-          background-color: aliceblue;
-          padding: 10px;
-          box-shadow: inset #999 4px -4px 2px 0;
+      }
+    }
+    main {
+      background: url(5.jpg);
+      background-size: 100% 100%;
+      .container > ul {
+        li {
+          font-family: fantasy;
+          list-style: circle;
+          padding-bottom: 16px;
+          span.ques {
+            display: block;
+            font-size: 1.3em;
+          }
+          span.byques {
+            color: #cccccc;
+            font-size: 0.7em;
+          }
+          span.quesusername {
+            font-size: 1.2em;
+            margin: 0 10px;
+            text-shadow: 2px 2px grey;
+          }
+          span.questime {
+            display: block;
+            position: absolute;
+            font-size: .7em;
+          }
+          span.queseditlink {
+            position: relative;
+            float: right;
+            background-color: aliceblue;
+            padding: 10px;
+            box-shadow: inset #999 4px -4px 2px 0;
+          }
         }
       }
     }
   }
+
 }
   //xs
 
