guardfile style injection

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -45,7 +45,7 @@
     header {
       background: url("1.jpg");
       background-size: 30% 100%;
-      opacity: 0.6;
+      opacity: .6;
       .anime {
         .loader-inner > div {
           background-color: #000000;
